# fleetmind

./: .gitignore  README.md  fm
src/fleetmind/: package.xml  setup.cfg  setup.py
src/fleetmind/fleetmind/: adapter_base.py  fleet_cli.py  fleet_manager.py  fpv_server.py  mock_adapter.py  px4_adapter.py  robot_node.py  viz_node.py
src/fleetmind/launch/: demo.launch.py  fleet.launch.py
src/fleetmind/rviz/: fleetmind.rviz
src/fleetmind/web/: app.js  index.html
src/fleetmind_msgs/: CMakeLists.txt  package.xml
src/fleetmind_msgs/action/: MissionCommand.action
src/fleetmind_msgs/msg/: FleetCommand.msg  RobotState.msg
tools/: px4_test.py
